# monitorist

./: LICENSE  README.md  flutter_launcher_icons.yaml  pubspec.yaml
integration_test/: simple_test.dart
lib/: edit_view.dart  home_view.dart  main.dart
lib/components/: reactive_text_field.dart
lib/models/: profile.dart
lib/services/: monitors_service.dart  nightlight_service.dart  profiles_service.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/src/rust/api/: monitors.dart  nightlight.dart
lib/viewmodels/: edit_profile_viewmodel.dart  editprofile_viewmodel.dart  monitors_viewmodel.dart  nightlight_panel_viewmodel.dart  nightlight_viewmodel.dart  profiles_viewmodel.dart  theme_viewmodel.dart
lib/views/: edit_view.dart  home_view.dart  monitors_panel.dart  profiles_panel.dart
rust/: Cargo.toml
rust/src/: frb_generated.rs
rust/src/api/: mod.rs  monitors.rs  nightlight.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/android/src/main/: AndroidManifest.xml
rust_builder/ios/: rust_lib_monitorist.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_monitorist.podspec
rust_builder/windows/: CMakeLists.txt
test/: widget_test.dart
windows/: CMakeLists.txt
windows/flutter/: generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
