[package]
name = "rust_lib_monitorist"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
brightness = "0.8.0"
flutter_rust_bridge = "=2.11.1"
futures = "0.3.31"
sem-reg = "0.1.1"
thiserror = "2.0.17"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
